c4prj2_input/grade.txt
Grading at Thu Aug  1 13:16:11 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:11:19: error: passing argument 1 of ‘strcpy’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   cursor = strcpy(cursor, str);
                   ^
In file included from input.c:3:0:
/usr/include/string.h:125:14: note: expected ‘char * restrict’ but argument is of type ‘char **’
 extern char *strcpy (char *__restrict __dest, const char *__restrict __src)
              ^
input.c:11:10: error: assignment to expression with array type
   cursor = strcpy(cursor, str);
          ^
input.c:16:17: error: comparison between pointer and integer [-Werror]
   while(*cursor != '\n'){
                 ^
input.c:17:23: error: passing argument 1 of ‘strchr’ from incompatible pointer type [-Werror=incompatible-pointer-types]
     card_end = strchr(cursor,' ');
                       ^
In file included from input.c:3:0:
/usr/include/string.h:231:14: note: expected ‘const char *’ but argument is of type ‘char **’
 extern char *strchr (const char *__s, int __c)
              ^
input.c:19:25: error: passing argument 1 of ‘strchr’ from incompatible pointer type [-Werror=incompatible-pointer-types]
       card_end = strchr(cursor, '\n');
                         ^
In file included from input.c:3:0:
/usr/include/string.h:231:14: note: expected ‘const char *’ but argument is of type ‘char **’
 extern char *strchr (const char *__s, int __c)
              ^
input.c:21:16: error: comparison of distinct pointer types lacks a cast [-Werror]
     if (cursor == card_end){
                ^
input.c:22:13: error: lvalue required as increment operand
       cursor++;
             ^
input.c:27:19: error: comparison between pointer and integer [-Werror]
       if (*cursor == '?'){
                   ^
input.c:28:27: error: passing argument 1 of ‘atoi’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  add_future_card(fc, atoi(cursor+1), add_empty_card(dummy_deck));
                           ^
In file included from input.c:1:0:
/usr/include/stdlib.h:147:12: note: expected ‘const char *’ but argument is of type ‘char **’
 extern int atoi (const char *__nptr)
            ^
input.c:29:9: error: assignment to expression with array type
  cursor = card_end + 1;
         ^
input.c:32:44: error: passing argument 1 of ‘card_from_letters’ makes integer from pointer without a cast [-Werror=int-conversion]
  add_card_to(dummy_deck, card_from_letters(*cursor,*(cursor+1)));
                                            ^
In file included from deck.h:4:0,
                 from input.h:4,
                 from input.c:4:
cards.h:37:8: note: expected ‘char’ but argument is of type ‘char *’
 card_t card_from_letters(char value_let, char suit_let);
        ^
input.c:32:52: error: passing argument 2 of ‘card_from_letters’ makes integer from pointer without a cast [-Werror=int-conversion]
  add_card_to(dummy_deck, card_from_letters(*cursor,*(cursor+1)));
                                                    ^
In file included from deck.h:4:0,
                 from input.h:4,
                 from input.c:4:
cards.h:37:8: note: expected ‘char’ but argument is of type ‘char *’
 card_t card_from_letters(char value_let, char suit_let);
        ^
input.c:33:9: error: assignment to expression with array type
  cursor += 2;
         ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
